<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.oseias.sverse.OthersActivitys.CriadorDeAtividades"
    tools:showIn="@layout/activity_criador_de_atividades">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/lbl_selecione_materia"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinnerSeletorDeMaterias"
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="128dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="24dp"
                    android:text="Título"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                    app:layout_constraintHorizontal_bias="0.571"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <EditText
                    android:id="@+id/editNome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textCapWords|textAutoCorrect|textPersonName"
                    android:text="@string/lbl_digite_aqui"
                    app:layout_constraintEnd_toEndOf="@+id/spinnerSeletorDeMaterias"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="126dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/lbl_descricao"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/edtTextAssunto" />

                <EditText
                    android:id="@+id/editDescricao"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@string/lbl_digite_aqui"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="@+id/edtTextAssunto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView39" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="81dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/lbl_dificuldade"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView39"
                    app:layout_constraintTop_toBottomOf="@+id/editDescricao" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="@+id/editDescricao"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10" />

                <ImageView
                    android:id="@+id/bSeletorBG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@string/lbl_add_data"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:srcCompat="@mipmap/ic_calendario" />

                <ImageView
                    android:id="@+id/bBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/lbl_add_data"
                    app:layout_constraintEnd_toEndOf="@+id/bSeletorBG"
                    app:layout_constraintStart_toStartOf="@+id/bSeletorBG"
                    app:layout_constraintTop_toBottomOf="@+id/bSeletorBG"
                    app:srcCompat="@mipmap/ic_seletor_de_cor" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="Selecine o background"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/bBackground"
                    app:layout_constraintStart_toEndOf="@+id/bBackground"
                    app:layout_constraintTop_toTopOf="@+id/bBackground" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_data_de_entrega"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/bSeletorBG"
                    app:layout_constraintStart_toEndOf="@+id/bSeletorBG"
                    app:layout_constraintTop_toTopOf="@+id/bSeletorBG" />

                <TextView
                    android:id="@+id/tvData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:text="@string/lbl_data_atual"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bSeletorBG" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lbl_hora_atual"
                    app:layout_constraintBottom_toBottomOf="@+id/bSeletorBG"
                    app:layout_constraintStart_toStartOf="@+id/tvData"
                    app:layout_constraintTop_toBottomOf="@+id/tvData" />

                <ImageView
                    android:id="@+id/bDescartar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/lbl_excluir"
                    android:onClick="cancelarCriacao"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/bAcept"
                    app:layout_constraintTop_toBottomOf="@+id/bBackground"
                    app:srcCompat="@mipmap/ic_lexcluir_c" />

                <ImageView
                    android:id="@+id/bAcept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/lbl_confirmar"
                    android:onClick="addAct"
                    app:layout_constraintBottom_toBottomOf="@+id/bDescartar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/bDescartar"
                    app:srcCompat="@mipmap/ic_acept" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="126dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="24dp"
                    android:text="Assunto"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/editNome" />

                <EditText
                    android:id="@+id/edtTextAssunto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:inputType="textCapWords|textAutoCorrect|textPersonName"
                    android:text="@string/lbl_digite_aqui"
                    android:textAlignment="viewStart"
                    app:layout_constraintEnd_toEndOf="@+id/editNome"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
