<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.oseias.sverse.OthersActivitys.CriadorDeNotas"
    tools:showIn="@layout/activity_criador_de_notas">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingTop="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/vGrup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="2dp"
                    android:paddingBottom="24dp"
                    android:paddingTop="0dp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <TextView
                        android:id="@+id/textTitulo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="16dp"
                        android:text="Titulo"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:elevation="10dp"
                        android:onClick="mostrarData"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editNota1"
                        app:srcCompat="@mipmap/ic_add_alarme" />

                    <EditText
                        android:id="@+id/editTitulo1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

                    <EditText
                        android:id="@+id/editNota1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textNota" />

                    <TextView
                        android:id="@+id/textNota"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="13dp"
                        android:text="Nota"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTitulo1" />

                    <TextView
                        android:id="@+id/textAlarm1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:onClick="mostrarData"
                        android:text="@string/lbl_sem_alarmes"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />

                    <TextView
                        android:id="@+id/textAlarm2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:onClick="mostrarData"
                        android:text="@string/lbl_msg_adicione_alarme"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintStart_toStartOf="@+id/textAlarm1"
                        app:layout_constraintTop_toBottomOf="@+id/textAlarm1" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:elevation="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        app:srcCompat="@mipmap/ic_seletor_de_cor" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:elevation="10dp"
                        android:onClick="cancelarCriacao"
                        app:layout_constraintEnd_toStartOf="@+id/imageView9"
                        app:layout_constraintTop_toTopOf="@+id/imageView14"
                        app:srcCompat="@mipmap/ic_lexcluir_c" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:adjustViewBounds="false"
                        android:elevation="10dp"
                        android:onClick="criarNota"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView8"
                        app:srcCompat="@mipmap/ic_acept" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/lbl_sem_cor"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/lbl_add_cor"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:elevation="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        app:srcCompat="@mipmap/ic_emoji" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/lbl_sem_emoji"
                        app:layout_constraintBottom_toTopOf="@+id/textView18"
                        app:layout_constraintStart_toEndOf="@+id/imageView13"
                        app:layout_constraintTop_toTopOf="@+id/imageView13" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/lbl_add_emoji"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                        app:layout_constraintStart_toStartOf="@+id/textView17" />

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:elevation="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView13"
                        app:srcCompat="@mipmap/ic_tag" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/lbl_sem_tag"
                        app:layout_constraintBottom_toTopOf="@+id/textView21"
                        app:layout_constraintStart_toEndOf="@+id/imageView14"
                        app:layout_constraintTop_toTopOf="@+id/imageView14" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:text="@string/lbl_add_tag"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                        app:layout_constraintStart_toStartOf="@+id/textView20" />

                    <TextView
                        android:id="@+id/lbl_data"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginBottom="4dp"
                        android:background="@mipmap/ic_lbl_text"
                        android:elevation="10dp"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="2dp"
                        android:text="@string/lbl_data_atual"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/lbl_hora"
                        app:layout_constraintEnd_toEndOf="@+id/lbl_hora"
                        app:layout_constraintTop_toTopOf="@+id/imageView4" />

                    <TextView
                        android:id="@+id/lbl_hora"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:background="@mipmap/ic_lbl_text"
                        android:elevation="10dp"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="2dp"
                        android:text="@string/lbl_hora_atual"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                        app:layout_constraintEnd_toStartOf="@+id/bDelAlarme" />

                    <ImageView
                        android:id="@+id/bDelAlarme"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="@+id/lbl_hora"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/lbl_data"
                        app:srcCompat="@mipmap/ic_del" />
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
